# slskd-transform

./: .coderabbit.yaml  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  LICENSE  README.md  codecov.yml  config.example.yml  main.py  pyproject.toml  rename-files.py  requirements-test.txt  requirements.txt
.github/: dependabot.yml
.github/workflows/: stale.yml  tests.yml
.omc/state/: agent-replay-9ed5b70c-6862-42ab-bf68-72294a57c7d3.jsonl  hud-stdin-cache.json  last-tool-error.json  mission-state.json  subagent-tracking.json
.omc/state/sessions/9ed5b70c-6862-42ab-bf68-72294a57c7d3/: hud-state.json
.omc/state/sessions/be7123eb-cb74-42d9-be1a-1702ed86a3dd/: hud-state.json
src/slskd_transform/: __init__.py  cli.py  config.py  rename.py  search.py  utils.py
tests/: test_cli.py  test_config.py  test_rename.py  test_search.py  test_slskd_transform.py  test_utils.py
